# hangman_rs_web

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  changelog.md  words.txt  workspace.code-workspace
src/: main.rs  paths.rs  request_data.rs  requests.rs
src/game/: base_game.rs  mod.rs  words.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  singleplayer.rs  utils.rs
web/: index.html  multiplayer.html  multiplayer_script.js  script.js  singleplayer.html  style-singleplayer.css  style.css
web/multiplayer/: multiplayer.html
web/singleplayer/: singleplayer.html  singleplayer.js  style-singleplayer.css  utils.js
